ontol/ontol-compiler/test-cases/error/rel/namespace_not_found.on
def foo (
    rel* 'prop':
        dep // ERROR namespace not found
        .foo
)
